<resources>
    //String used by Intro Layout
    <string name="app_name">Fook Order</string>
    <string name="intro">Rose Store</string>
    <string name="userName">User Name</string>
    <string name="enter_userName">Enter User Name</string>
    <string name="start_button">Get Started</string>
    //String used by Main Layout
    <string name="order_eat">Order And Eat</string>
    <string name="search">Search Your Food</string>
    <string name="delicious">Delicious Food</string>
</resources>