<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9E00"
    tools:context=".Intro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="#FF9E00"
        app:srcCompat="@drawable/intro_illus" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="40dp"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="#673AB7"
        android:text="@string/intro" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:layout_gravity="bottom"
        android:background="#FF9E00"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/userName"
            android:textSize="30dp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/intro_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_userName"
            android:inputType="textCapSentences"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:background="@drawable/background_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_editText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>